moviendo archivos del primer taller a la carpeta figuras y aplicando estilos base

--- a/figuras/figuras.html
+++ b/figuras/figuras.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figuras Geométricas | Taller Práctico de Javascript</title>
     <link rel="stylesheet" href="./figuras.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Inter:wght@100;300;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <main>
-      <h1>Figuras Geométricas</h1>
+    <main class="page--container">
+      <h1 class="page__title">Figuras Geométricas</h1>
     </main>
     <script src="./figuras.js"></script>
   </body>
